# French-format-Iso20022-Address-Converter

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  postman.json
.github/workflows/: build-test.yml
src/: lib.rs  main.rs  rest_main.rs
src/application/: address_service.rs  mod.rs
src/application/command/: address_command_service.rs  mod.rs
src/application/query/: address_query_service.rs  mod.rs
src/cli/: commands.rs
src/domain/: mod.rs  models.rs  repository.rs  usecases.rs  validation.rs
src/infrastructure/: app_state.rs  file_repository.rs  in_memory_repository.rs  mod.rs  mongo_repository.rs  postgresql_repository.rs  rest_controller.rs
src/infrastructure/controller/: mod.rs  rest_controller.rs
src/infrastructure/repository/: file_repository.rs  in_memory_repository.rs  mongo_repository.rs
tests/: cli_tests.rs  integration_tests.rs  validation_tests.rs
tests/infrastructure/: in_memory_repository.rs
