[package]
name = "fraddriso20022"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7"
uuid = { version = "1.15.1", features = ["v4"] }
predicates = "3.1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "fraddris020022"
path = "src/lib.rs"
