[package]
name = "fraddriso20022"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7"
uuid = { version = "1.15.1", features = ["v4"] }
predicates = "3.1.3"

mongodb = { version = "2.8.2", default-features = false, features = ["sync"] }

derive_builder = "0.20.2"

actix-web = "4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fraddriso20022-cli"
path = "src/main.rs"

[[bin]]
name = "fraddriso20022-rest"
path = "src/rest_main.rs"
