[package]
name = "fraddriso20022"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.32", features = ["derive"] }
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
predicates = "3.1.3"

mongodb = { version = "3.2.3", default-features = false, features = [
    "sync",
    "rustls-tls",
    "compat-3-0-0"
] }

derive_builder = "0.20.2"
tokio = { version = "1.44.2", features = ["full"] }
actix-web = "4.10.2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fraddriso20022-cli"
path = "src/main.rs"

[[bin]]
name = "fraddriso20022-rest"
path = "src/rest_main.rs"
